--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,4 @@
-Options +FollowSymlinks -Indexes
-RewriteEngine on
+RewriteEngine On
 
 DirectoryIndex index.php
 RewriteCond $1 !^(index\.php|resources|robots\.txt)
